# fm-apis

./: .editorconfig  .gitignore  Dockerfile  DockerfileBase  README.md  example.env  nginx.conf  pyproject.toml  requirements.txt  uwsgi.ini
.github/workflows/: codeql.yml  deploy_sirencon.yml  django.yml
fm_eventmanager/: settings.py.devel  settings.py.docker  settings.py.example  settings.py.travis
registration/: __init__.py  admin.py  context_processors.py  emails.py  forms.py  models.py  mqtt.py  payments.py  urls.py
registration/frontend/: esbuild.mjs  package-lock.json  package.json  tsconfig.json
registration/middleware/: cloudflare.py  filebeat.py  logging.py  networks.py
registration/migrations/: 0104_add_event_website_url.py  0104_add_more_event_options.py  0105_add_event_website_url.py  0105_add_trigram_extensions_20241114_1419.py  0106_add_badge_templates.py  0106_auto_20250121_0209.py  0106_mqtt_printing_per_terminal.py  0107_auto_20250216_2114.py  0107_mqtt_printing_per_terminal.py  0108_auto_20250216_2345.py  0108_update_pricelevels.py  0109_add_trigram_extensions_20241114_1419.py  0109_more_terminal_settings.py  0110_auto_20250219_0242.py  0110_auto_20250529_0129.py  0111_auto_20250224_0015.py  0111_auto_20250530_1253.py  0112_auto_20250305_0205.py  0112_auto_20250531_0051.py  0113_auto_20250308_2157.py  0114_auto_20250310_0154.py  0115_auto_20250527_0114.py  0116_auto_20250527_0118.py  0117_add_badge_templates.py  0118_mqtt_printing_per_terminal.py  0119_update_pricelevels.py
registration/templatetags/: settings.py  (+2 more)
templates/: 503.html
(+97 files in other folders)
